[project]
name = "choo_choo_ui"
version = "0.1.0"
description = "User Interface for the Choo Choo Console"
authors = [
  { name = "Christopher Khoo", email = "khoojinnwei@gmail.com" },
]
dependencies = [
    "pymysql==1.1.0",
    'streamlit'
]
requires-python = "~=3.11"

[project.urls]
repository = "https://github.com/thekhoo/stock-indicator-service"

[project.optional-dependencies]
development = [
  "boto3==1.34.7",
  "pytest==7.4.3",
  "flake8==6.1.0",
  "pytest-snapshot==0.9.0",
  "mypy~=1.8.0",
  "freezegun~=1.4.0",
  "pytest-cov~=5.0.0",
  "pytest-mock~=3.14.0"
]


[tool.setuptools.packages.find]
exclude = ["tests"]